<resources>
    <string name="app_name">parcial-1-am-acn4bv-colmann-cruz</string>
    <string name="textViewContent">Este es un texto oculto</string>
    <string name="textViewContentSecondTOnClick">Haz hecho click en el buscador</string>


    //LOGIN ACTIVITY //
    <string name="loginTitleText">LOGIN</string>
    <string name="emailTitle">Email:</string>
    <string name="passwordTitle">Password:</string>
    <string name="login_button_text">Login</string>

    <string name="create_an_account_registerText">Create an account. Register</string>

    //REGISTER ACTIVITY//
    <string name="registerButtonText">Register</string>
    <string name="already_have_an_accountText">Already have an account? Login</string>


    //MAIN ACTIVITY //
    <string name="bar_home">Home</string>
    <string name="bar_collection">Collection</string>
    <string name="bar_wishlist">Wishlist</string>
    <string name="bar_profile">Profile</string>

    <string name="newReleaseText">New Releases</string>
    <string name="freeDownloadText">Free Download</string>
    <string name="topSellerText">Top Sellers</string>
    <string name="mostPlayedText">Most Played</string>
    <string name="saleEventsText">Sale Events</string>
    <string name="communityText">Community</string>

    <string name="cerrarSesionButtonText">Cerrar Sesion</string>

    <string name="description_community_pic">community picture</string>
    <string name="description_mostplayed">description_mostplayed_pic</string>
    <string name="description_freedownload">description_freedownload_pic</string>
    <string name="description_newrelease_pic">description_newrelease_pic</string>
    <string name="description_topseller">description_topseller</string>
    <string name="description_saleevent">description_saleevent</string>

    //BACK BUTTON //
    <string name="backbuttontomain">backButtonToMain</string>


    //NEW RELEASES //
    <string name="textViewGame1Title">COUNTER STRIKE 2</string>
    <string name="textViewGame2Title">GTA 5</string>
    <string name="textViewGame3Title">EA SPORTS FC™ 24</string>
    <string name="textViewGame4Title">DESTINY 2</string>
    <string name="textViewGame5Title">CALL OF DUTY</string>
    <string name="textViewGame6Title">PUBG: BATTLEGROUNDS</string>

    <string name="contentButtonText">Actualizar</string>


    <string name="description_game1">description_game1_pic</string>
    <string name="description_game2">description_game2_pic</string>
    <string name="description_game3">description_game3_pic</string>
    <string name="description_game4">description_game4_pic\n</string>
    <string name="description_game5">description_game5_pic</string>
    <string name="description_game6">description_game6_pic</string>


    //FREE DOWNLOAD//
    <string name="december_events_titleText">December Events</string>

    <string name="christmas_eventTextTitle">Christmas Discount Event</string>
    <string name="halloween_subtext">Open the boxes and find amazing prizes!</string>
    <string name="bubble_games_holiday_saleTitleText">Bubble Games Holiday Sale!</string>
    <string name="holiday_sale_banner">HOLIDAY SALE BANNER</string>
    <string name="downloadButton">¡Sorpresa!</string>


    <string name="bubblediscount">bubbleDiscount</string>
    <string name="holidaybanner">holidaybanner</string>

    <string name="description_holidaysale">description_holidaysale_pic</string>
    <string name="description_holidaysale2">description_holidaysale2_pic</string>


    //MOST PLAYED//
    <string name="most_played_titulo">Most Played!</string>

    <string name="textViewNombre">Nombre: </string>
    <string name="textViewPlataforma">Plataforma: </string>
    <string name="textViewAñoLanzamiento">Año de Lanzamiento: </string>
    <string name="textViewGenero">Genero: </string>
    <string name="textViewDesarrollador">Desarrollador: </string>

    <string name="textViewPuesto1">PUESTO #1</string>
    <string name="textViewPuesto2">PUESTO #2</string>
    <string name="textViewPuesto3">PUESTO #3</string>
    <string name="textViewPuesto4">PUESTO #4</string>
    <string name="textViewPuesto5">PUESTO #5</string>

</resources>