<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#EC2E2E"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="REGISTER"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/emailBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/emailTitle"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D9D9D9">

        <EditText
            android:id="@+id/passwordBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/passwordTitle"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id ="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/background_loginregister_button"
        android:onClick="onRegisterButtonClick"
        android:text="@string/registerButtonText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/registerTologinBottomMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_have_an_accountText"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        />




</LinearLayout>