<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/texto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRelease">

    <LinearLayout
        android:id="@+id/layoutBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_search_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/textViewBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/search_color"
            android:queryHint="Search"
            tools:layout_marginBottom="15dp" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="62dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:clickable="true"
            android:onClick="onBackButtonClick"
            android:src="@drawable/round_arrow_back_ios_24"
            android:contentDescription="@string/backbuttontomain"
            android:focusable="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/hidden_text"
        android:text="@string/textViewContent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/layoutCenterArrayPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutBase" />

    <LinearLayout
        android:id="@+id/layoutCenterArrayPic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FF9800"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBox"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">

        <ScrollView
            android:id="@+id/scrollBase"
            android:layout_width="match_parent"
            android:layout_height="458dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/layoutCenterRowsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/gameRowContainer1"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#40E4D5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewGame1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/coustrike" />

                    <TextView
                        android:id="@+id/textViewGame1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewGame1Title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gameRowContainer2"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#A481E3"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewGame2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/grandtheftauto_cinco" />

                    <TextView
                        android:id="@+id/textViewGame2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewGame2Title" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gameRowContainer3"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#4CAF50"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewGame3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/eafc" />

                    <TextView
                        android:id="@+id/textViewGame3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewGame3Title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gameRowContainer4"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FAAB92"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewGame4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/destinty_dos" />

                    <TextView
                        android:id="@+id/textViewGame4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewGame4Title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gameRowContainer5"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#7386F1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewGame5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/callofduty" />

                    <TextView
                        android:id="@+id/textViewGame5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewGame5Title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gameRowContainer6"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#7386F1"

                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewGame6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/battle" />

                    <TextView
                        android:id="@+id/textViewGame6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textViewGame6Title" />
                </LinearLayout>


            </LinearLayout>


        </ScrollView>
    </LinearLayout>






















    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_vector_color"
        app:itemIconTint="@drawable/vector_color"
        app:itemTextColor="@drawable/vector_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_bar" />



</androidx.constraintlayout.widget.ConstraintLayout>